--- a/pages/complaintsMake/complaintsMake.wxss
+++ b/pages/complaintsMake/complaintsMake.wxss
@@ -1,118 +1,1 @@
-/* pages/complaintsMake /complaintsMake.wxss */
-/* .warp {
-  padding: 2em 1em;
-}
-.topic {
-  margin-top: 2em;
-}
-.topic input {
-  border: 1px solid #dedede;  
-  height: 2em;
-}
-.topic textarea {
-  border: 1px solid #dedede;  
-  height: 8em;
-}
-.file-upload {
-  width: 100%;
-  height: 5rem;
-  border: 1px dashed #c4c4c4;
-  background-color: #f2f2f2;
-}
-
-.lin{
-  line-height: 2em;
-}
-
-.next{
-  width: 35%;
-  background-color: #dd4734;
-  line-height: 2rem;
-  text-align: center;
-  border-radius: 10rem;
-
-}
-.bottom {
-  padding: 2em 0;
-  margin-top: 0.5em;
-}
-.back{
-  width: 35%;
-  background-color: #cecece;
-  line-height: 2rem;
-  text-align: center;
-  border-radius: 10rem;
-
-
-} */
-.btn{
-    width:90%;
-  line-height: 2.2rem;
-  border-radius: 100rem;
-  background-color: #1d8aff;
-  margin-top: 4rem;
-  margin-bottom: 0.5rem;
-  position:absolute;
-bottom:90rpx;
-left:5%;
-height:90rpx;
-line-height:90rpx;
-
-
-}
-
-.top image{
-  width: 60rpx;
-  height: 60rpx;
-}
-.bi image{
-  height: 40rpx;
-  width: 40rpx;
-}
-.smile{
-margin: 0 15rpx;
-}
-.bi{
-  margin-right:15rpx;
-
-}
-.top{
-  display:flex;
-  margin-top: 75rpx;
-  margin-bottom: 45rpx;
-  height:60rpx;
-padding:0 30rpx;
-
-}
-/* .middle{
-  height:250rpx;
-background:#fafafa;
-margin:0 30rpx;
-
-} */
-.weui-cells{
-  margin:0 30rpx;
-background:#fafafa;
-min-height:250rpx;
-border:none;
-
-}
-.shuru{
-  width:425rpx;
-
-}
-.center{
-  color: #cccccc;
-
-}
-.center1{
-  color: #cccccc;
-  font-size: 38rpx;
-}
-.textarea-wrp{
-  min-height:250rpx;
-margin:0 30rpx;
-background:#fafafa;
-box-sizing:border-box;
-padding:35rpx;
-}
+/* pages/complaintsMake/complaintsMake.wxss */
