--- a/app.wxss
+++ b/app.wxss
@@ -4,6 +4,7 @@
  page {
    font-family: "微软雅黑";
  }
+ 
 
  .container {
    height: 100%;
@@ -14,6 +15,7 @@
    padding: 200rpx 0;
    box-sizing: border-box;
  }
+
 
  .bg {
    width: 100%;
@@ -57,6 +59,9 @@
  .w25 {
    width: 25%;
  }
+ .w45 {
+   width: 45%;
+ }
 
  .w80 {
    width: 80%;
@@ -68,6 +73,9 @@
 
  .w90 {
    width: 90%;
+ }
+ .w95 {
+   width: 95%;
  }
 
  .w75 {
@@ -183,6 +191,12 @@
    justify-content: flex-start;
    align-items: flex-end;
    align-content: flex-start;
+ }
+ .flex-end {
+   display: flex;
+   justify-content: flex-end;
+   align-items: center;
+   align-content: center;
  }
 
  .flex-center-start-column-center {
