--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -26,19 +26,6 @@
   background-color: #fff;
 }
 
-.flex-center-column image {
-  height: 110rpx;
-  width: 220rpx;
-  display: block;
-}
-
-.flex-center-warp-circl image {
-  height: 100rpx !important;
-  width: 100rpx !important;
-  display: block;
-  border-radius: 100rpx;
-}
-
 .flex-center-column text {
   font-size: 30rpx;
 }
@@ -50,20 +37,27 @@
 .fz12 {
   font-size: 12px;
 }
-
-.btn image {
-  height: 110rpx;
-  width: 220rpx;
-  display: block;
-  /* width: 31.5%;
-  height: 55px; */
+.btn {
+  margin-top: 2rem;
 }
 
-/* .btn-bottom image{
-  height: 42px;
-  width: 42px;
-} */
+.btn image {
+  height: 185rpx;
+}
+.bt-image {
+  height: 210rpx;
+}
 
+.user-img {
+  height: 120rpx;
+  width: 120rpx;
+  border-radius: 100%;
+  position: absolute;
+  top: 14rpx;
+  left: 39rpx;
+  box-shadow: 0 15rpx 20rpx -5px #000;
+
+}
 .wechat {
   width: 100%;
   height: 55px;
@@ -74,7 +68,7 @@
 }
 
 .prepare-item {
-  width: calc((100% - 8vw) / 3)
+  width: calc((100% - 8vw) / 3);
 }
 
 .online-banner {
@@ -83,5 +77,22 @@
 }
 
 .flex-center-evenly {
-  justify-content: space-around;
+  /* justify-content: space-around; */
+  flex-wrap: wrap;
+}
+
+.center {
+  background-color: #fff;
+  color: #999;
+  padding: 0.5em 1em;
+  border-radius:100rem; 
+  position: absolute;
+  top: 40rpx;
+  right: 120rpx;
+  
+}
+
+.footer {
+  position: absolute;
+  bottom: 50rpx;
 }
