--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -30,11 +30,11 @@
                 <view class="weui-cell__bd">我的记录</view>
                 <view class="weui-cell__ft weui-cell__ft_in-access"></view>
             </navigator>
-            <navigator url="../video/video" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+            <navigator url="../myVideo/index" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
                 <view class="weui-cell__hd">
                     <image src="../../static/images/mine-04.png" style="margin-right: 20rpx;vertical-align: middle;width:50rpx; height: 50rpx;"></image>
                 </view>
-                <view class="weui-cell__bd">我的直播</view>
+                <view class="weui-cell__bd">我的观看</view>
                 <view class="weui-cell__ft weui-cell__ft_in-access"></view>
             </navigator>
             <navigator url="../myYuYue/myYuYue" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
