--- a/pages/concat/concat.wxml
+++ b/pages/concat/concat.wxml
@@ -1,2 +1,15 @@
 <!--pages/concat/concat.wxml-->
-<text>pages/concat/concat.wxml</text>
+<view>
+  <map id="map" longitude="117.249500" latitude="39.070220" scale="17" markers="{{markers}}" bindmarkertap="markertap" bindcallouttap="qipao" style="width: 100%; height: 300px;"></map>
+  <view class='dizhi'>
+    <view class='concat'>联系我们：</view>
+    <view>联系地址:天津市河西区洞庭路20号</view>
+    <view>邮政编码:300220</view>
+    <view>服务电话:85582800</view>
+    <view>85582963(传真)</view>
+    <view>投诉电话:86-022-85582929</view>
+    <view>网址:spj.tjhx.gov.cn</view>
+
+  </view>
+</view>
+
