--- a/pages/consultation/consultation.wxss
+++ b/pages/consultation/consultation.wxss
@@ -1,8 +1,22 @@
 /* pages/consultation/onsultation.wxss */
 
+button:after {
+  border: none;
+}
+
 .row {
   width: 100%;
   overflow: auto;
+}
+
+.yh-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.yh-row-start {
+  justify-content: flex-start;
 }
 
 /* 顶部的搜索框 */
@@ -18,6 +32,7 @@
   width: 94vw;
   margin: 5vw auto;
   border-radius: 55vw;
+  /* background-image: url(../../static/images/banjian.png); */
 }
 
 .record-inpuit input {
@@ -31,6 +46,33 @@
   height: 6vw !important;
 }
 
+.scene-list {
+  padding: 0 5vw;
+}
+
+.scene-list text {
+  text-indent: 2rem;
+  background-color: #00bcd412;
+  padding: 2vw;
+  border-radius: 2vw;
+  width: 100%;
+}
+
+.reading {
+  padding: 3vw 0;
+}
+
+/* 重听按钮 */
+
+.relisten {
+  width: 20vw;
+  font-size: 3.5vw;
+  background-color: #00BCD4;
+  color: #fff;
+  border-radius: 10vw;
+  margin: 0 1vw;
+}
+
 /* 计时器 */
 
 .record-tip {
@@ -38,12 +80,26 @@
   text-align: center;
 }
 
+/* 中间常用的搜索项 */
+
+.record_body {
+  padding: 1vw 5vw;
+}
+
+.record_body_btns {
+  padding: 0 3vw;
+  font-size: 12px;
+  display: inline-block;
+  margin-right: 2vw;
+  border-radius: 15vw;
+}
+
 /* 底部的按住说话按钮 */
 
 .record-foot {
   position: absolute;
   left: 0;
-  bottom: 5vh;
+  bottom: 30vh;
   /* transform:translate(-50%,0); */
   width: 100%;
   display: flex;
@@ -103,4 +159,46 @@
     transform: scale(2.2);
     opacity: 0;
   }
+}
+
+/* 底部的客服按钮 */
+
+.customer_service {
+  position: absolute;
+  right: 3vw;
+  bottom: 10vh;
+  width: 12vw;
+  height: 12vw;
+}
+
+.customer_service button {
+  opacity: 0;
+  width: 100% !important;
+  height: 100% !important;
+}
+
+.customer_service image {
+  width: 100% !important;
+  height: 100% !important;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+/* btn公用按钮 */
+
+.btn_light_blue {
+  color: #4984F8;
+  background-color: #E8F1FE;
+}
+
+.btn_light_green {
+  color: #71C7BD;
+  background-color: #E8F6ED;
+}
+
+.btn_light_pink {
+  color: #E07464;
+  background-color: #FAF0EE;
 }
